<resources>
    <string name="app_name">DoseIt</string>
    <string name="parameters">Parameters</string>
    <string name="height">Height (cm):</string>
    <string name="weight">Weight (kg):</string>
    <string name="gender">Gender:</string>
    <string name="warning">Warning:</string>
    <string name="search_hint">Search medicines</string>
    <string name="speech_prompt">Search for medicine</string>
    <string name="speech_not_supported">Voice search is not supported</string>
    <string name="age">Age:</string>
    <string name="child">Child</string>
    <string name="adult">Adult</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="app_mode_prompt">Select application mode:</string>
    <string name="text_search_hint">Proceed to text search</string>
    <string name="photo_search_hint">Proceed to camera</string>
    <string name="voice_mode_hint">Proceed to voice mode</string>
    <string name="description_help">To calculate dosage, enter patient\'s parameters and select medicine in 3 possible ways:</string>
    <string name="swipe_help">Fill in the blanks then search for medicine.</string>
    <string name="email_address">Email</string>
    <string name="your_message">Message</string>
    <string name="speech_start">Talk!</string>
    <string name="male_or_female">Male or Female</string>
    <string name="_0_120">0-120</string>
</resources>
